--- a/www/index.html
+++ b/www/index.html
@@ -51,6 +51,8 @@
 
       <ion-content>
 
+          <button class="button button-positive button-full" ng-click="showAddTask()">Add</button>
+
           <button class="button button-assertive button-full" ng-click="showDeleteButtons()">Remove</button>
 
           <ion-list show-delete="showDeleteButton">
