bug fix - edit task

--- a/www/index.html
+++ b/www/index.html
@@ -28,7 +28,7 @@
 
     <ion-pane ng-controller="mainController">
       <ion-header-bar class="bar-positive">
-        <h1 class="title">Busy Task App</h1>
+        <h1 class="title"><i class="ion-android-checkmark-circle"></i> Busy Task App</h1>
       </ion-header-bar>
 
       <ion-footer-bar class="bar-positive">
